<resources>
    <string name="app_name">WhatsUp</string>
    <string name="app_namee">Messenger</string>
    <string name="fragment_onboarding_continue">Continue</string>
    <string name="fragment_phone_sign_in">SIGN IN</string>
    <string name="fragment_phone_hint">Phone number</string>
    <string name="fragment_phone_number">Phone number</string>
    <string name="fragment_phone_title">Sign in to your account</string>
    <string name="fragment_code_title">Enter OTP Code</string>
    <string name="fragment_code_verify">Verify</string>
    <string name="fragment_code_invalid_otp">Invalid OTP code</string>
    <string name="phone_error">Error sending code</string>
    <string name="fragment_code_sent_to">Code has been sent to %s</string>
    <string name="code_error">Error verifying code</string>
</resources>