<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/fragment_code_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="32dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:text="@string/fragment_code_sent_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/otp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fragment_code_invalid_otp"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/red"
        android:background="@drawable/background_error_text"
        app:layout_constraintStart_toStartOf="@id/otp"
        app:layout_constraintEnd_toEndOf="@id/otp"
        app:layout_constraintTop_toBottomOf="@id/otp"
        android:padding="4dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="16dp"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/baseline_error_outline_24"
        android:layout_marginTop="8dp"/>

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorSecondary"
        app:height="40dp"
        app:width="40dp"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:length="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:otp_text_size="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:text="@string/fragment_code_verify"
        app:cornerRadius="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>